# gchurch

./: .gitignore  README.md  main.py  pyproject.toml
accounts/: urls.py  views.py
config/: settings.py  urls.py  views.py
config/static/css/: output.css
groups/: models.py
groups/migrations/: 0001_initial.py
members/: forms.py  models.py  tests.py  urls.py  views.py
members/management/commands/: seed_members.py
members/migrations/: 0001_initial.py
static/js/: members.js
templates/: base.html  dashboard.html  members.html
templates/core/: dashboard.html
templates/members/: _form.html  _table.html  index.html
templates/registration/: login.html  register.html
