[project]
name = "gchurch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "heroicons>=2.14.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
]

[dependency-groups]
dev = [
    "faker>=40.19.1",
]
